<resources>
    <string name="app_name">Calculadora Simple</string>
    <string name="suma">+</string>
    <string name="resta">-</string>
    <string name="multiplica">x</string>
    <string name="divide">/</string>
    <string name="igual">=</string>
    <string name="titulo">Calculadora</string>
    <string name="numero1">1</string>
    <string name="numero2">2</string>
    <string name="numero3">3</string>
    <string name="numero4">4</string>
    <string name="numero5">5</string>
    <string name="numero6">6</string>
    <string name="numero7">7</string>
    <string name="numero8">8</string>
    <string name="numero9">9</string>
    <string name="numero0">0</string>
    <string name="decimal">.</string>


</resources>
