<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cl.inacap.calculadora.MainActivity">

    <TextView
        android:id="@+id/txvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/titulo"
        android:textSize="48px"

        />

    <EditText
        android:id="@+id/edtinputNumero"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="0"
        android:ellipsize="end"
        android:gravity="right"
        android:maxLines="1"
        android:inputType="numberDecimal"

        />


    <GridLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="7"
        tools:context="cl.inacap.calculadora.MainActivity">


        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Borrar"
            android:layout_row="2"
            android:layout_column="2"
            />

        <Button
            android:id="@+id/btnNum7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero7"
            android:layout_row="3"
            android:layout_column="0"
            android:textSize="30px"
            />

        <Button
            android:id="@+id/btnNum8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero8"
            android:layout_row="3"
            android:layout_column="1"
            android:textSize="30px"
            />

        <Button
            android:id="@+id/btnNum9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero9"
            android:layout_row="3"
            android:layout_column="2"
            android:textSize="30px"
            />

        <Button
            android:textSize="30px"
            android:id="@+id/btnNum4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero4"
            android:layout_row="4"
            android:layout_column="0"
            />

        <Button
            android:textSize="30px"
            android:id="@+id/btnNum5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero5"
            android:layout_row="4"
            android:layout_column="1"
            />

        <Button
            android:textSize="30px"
            android:id="@+id/btnNum6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero6"
            android:layout_row="4"
            android:layout_column="2"
            />

        <Button
            android:textSize="30px"
            android:id="@+id/btnNum1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero1"
            android:layout_row="5"
            android:layout_column="0"
            />

        <Button
            android:textSize="30px"
            android:id="@+id/btnNum2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero2"
            android:layout_row="5"
            android:layout_column="1"
            />

        <Button
            android:id="@+id/btnNum3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero3"
            android:textSize="30px"
            android:layout_row="5"
            android:layout_column="2"
            />

        <Button
            android:id="@+id/btnSuma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suma"
            android:textSize="40px"
            android:layout_row="2"
            android:layout_column="3"
            />

        <Button
            android:id="@+id/btnResta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resta"
            android:textSize="40px"
            android:layout_row="3"
            android:layout_column="3"
            />

        <Button
            android:id="@+id/btnMultiplo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiplica"
            android:layout_row="4"
            android:layout_column="3"
            />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divide"
            android:textSize="40px"
            android:layout_row="5"
            android:layout_column="3"
            />

        <Button
            android:id="@+id/btnIgual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40px"
            android:text="@string/igual"
            android:layout_row="6"
            android:layout_column="3"
            />

        <Button
            android:id="@+id/btnNum0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero0"
            android:textSize="30px"
            android:layout_row="6"
            android:layout_column="1"
            />

        <Button
            android:id="@+id/btnDecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decimal"
            android:textSize="30px"
            android:layout_row="6"
            android:layout_column="2"
            />



    </GridLayout>





</LinearLayout>
